fix formatting and alignment

--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -37,7 +37,10 @@
   }
 
   img {
-    margin: 0 auto 0.5rem;
+    display: inline;
+    margin: 0 auto 0.4rem;
+    height: 100%;
+    width: auto;
   }
 
   img + em {
